@@ -23,3 +23,10 @@ WEB FRAMEWORK COPYRIGHT <?PHP echo date("Y");?> GREENER WEB DESIGN. VARIOUS OPEN
 </body>
 
 </html>
+<?PHP
+// CACHING, IF ENABLED
+if($enable_cache) {
+	// SAVE PAGE TO CACHE
+	if(!$cache_loaded) { performance::cache_save(PAGE_TITLE); }
+}
+?>
