@@ -3,6 +3,7 @@ Created and maintained by Darius Babcock, Greener Web Design
 
 ## Version 5.2.0 ##
 	- Added class.rss for quick RSS processing. Currently only supports Atom 2.0
+	- Tweaked caching system to be easier to use and cleaned up default page
 
 ## Version 5.1.0 ##
 	- Moved image and form functions to class.image and class.form respectively. Removed from class.standards
